# RaveVirtualMachine

./: .gitignore  .gitmodules  Cargo.toml
classfile-parser/: Cargo.toml
classfile-parser/src/: attributes.rs  bytecode.rs  class_file.rs  constant_pool.rs  lib.rs
classfile-parser/src/aaa/: constant_pool.rs  mod.rs  parsing.rs
classfile-parser/src/byte_util/: mod.rs  parseable.rs  read_ext.rs
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
oold_src/: main.rs
oold_src/vm/: method.rs  mod.rs
src/: main.rs
src/byte_util/: mod.rs  parseable.rs  read_ext.rs
src/class_file/: attributing.rs  bytecode.rs  constant_pool.rs  constantpool.rs  mod.rs  parsing.rs
src/class_file/attributing/: attribute_parsing.rs  attributes.rs  mod.rs
src/vm/: code_source.rs  rcodes.rs  types.rs
test/: Addition.java
testsuite/: Cargo.toml  build.rs
testsuite/src/: lib.rs
testsuite/src/basic/: AddTwice.jasm  Addition.jasm  IfEq.jasm  IntArray.java  SimpleReturn.java  mod.rs
testsuite/tests/: Addition.jasm  Addition.java  Addition.rs  DoubleAddition.jasm  DoubleAddition.rs  IfEq.rs  IntArray.rs  SimpleReturn.java  SimpleReturn.rs  SimpleWhile.java  SimpleWhile.rs
vm/: Cargo.toml
vm-core/: Cargo.toml
vm-core/src/: class_loaders.rs  class_store.rs  classfile_util.rs  interop.rs  lib.rs  types.rs
vm-cranelift/: Cargo.toml
vm-cranelift/src/: lib.rs
vm-llvm/: Cargo.toml
vm-llvm/src/: lib.rs  type_translation.rs
