[package]
name = "cli"
version = "0.1.0"
authors = ["TheEpicBlock <git.teb@theepicblock.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
classfile-parser = { path = "../classfile-parser" }
vm-core = { path = "../vm-core" }
vm-llvm = { path = "../vm-llvm" }