[package]
name = "vm-core"
version = "0.1.0"
authors = ["TheEpicBlock <git.teb@theepicblock.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
classfile-parser = { path = "../classfile-parser" }
bitflags = "1.2"
enum-map = "2.7.3"
const_format = "0.2.32"
