[package]
name = "vm-cranelift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vm-core = { path = "../vm-core" }
classfile-parser = { path = "../classfile-parser" }
cranelift = "0.74.0"
cranelift-module = "0.74.0"
cranelift-jit = "0.74.0"